refactor(test): melhora saida dos testes e adiciona script de coverage

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
     "format": "prettier --write \"src/**/*.ts\"",
-    "test": "node --env-file=.env.test ./node_modules/jest/bin/jest.js",
+    "test": "node --env-file=.env.test --experimental-vm-modules ./node_modules/jest/bin/jest.js",
+    "test:coverage": "npm run test -- --coverage",
     "typeorm": "ts-node --transpile-only ./node_modules/typeorm/cli.js --dataSource ./src/config/datasource.ts",
     "migration:run": "npm run typeorm migration:run",
     "migration:show": "npm run typeorm migration:show",
