refactor(core,build,test): migra ambiente para ESM e ajusta suporte ao Vitest e TypeORM CLI

--- a/package.json
+++ b/package.json
@@ -2,22 +2,23 @@
   "name": "challenge.pantore",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "commonjs",
+  "type": "module",
   "scripts": {
-    "dev": "ts-node-dev --env-file=.env --respawn --transpile-only src/server.ts",
+    "dev": "tsx watch --env-file=.env src/server.ts",
     "build": "tsc",
     "start": "node --env-file=.env.production dist/server.js",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
     "format": "prettier --write \"src/**/*.ts\"",
-    "test": "node --env-file=.env.test --experimental-vm-modules ./node_modules/jest/bin/jest.js",
-    "test:coverage": "npm run test -- --coverage",
-    "typeorm": "ts-node --transpile-only ./node_modules/typeorm/cli.js --dataSource ./src/config/datasource.ts",
+    "test": "vitest run --mode test --config vite.config.ts --reporter verbose",
+    "test:coverage": "COVERAGE_PROVIDER=v8 vitest run --mode test --config vite.config.ts --coverage",
+    "test:coverage:istanbul": "COVERAGE_PROVIDER=istanbul vitest run --mode test --config vite.config.ts --coverage",
+    "typeorm": "node --loader ts-node/esm --experimental-specifier-resolution=node ./node_modules/typeorm/cli.js --dataSource ./src/config/datasource.ts",
     "migration:run": "npm run typeorm migration:run",
     "migration:show": "npm run typeorm migration:show",
-    "migration:create": "ts-node ./scripts/migration-create.ts",
+    "migration:create": "node --loader ts-node/esm ./scripts/migration-create.ts",
     "migration:revert": "npm run typeorm migration:revert",
-    "migration:generate": "ts-node ./scripts/migration-generate.ts"
+    "migration:generate": "node --loader ts-node/esm ./scripts/migration-generate.ts"
   },
   "keywords": [],
   "author": "",
@@ -38,19 +39,21 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
-    "@types/jest": "^30.0.0",
     "@types/node": "^24.0.7",
     "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.35.1",
     "@typescript-eslint/parser": "^8.35.1",
+    "@vitest/coverage-istanbul": "^3.2.4",
+    "@vitest/coverage-v8": "^3.2.4",
     "eslint": "^9.30.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.5.1",
-    "jest": "^30.0.3",
     "prettier": "^3.6.2",
     "supertest": "^7.1.1",
-    "ts-jest": "^29.4.0",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.8.3"
+    "ts-node": "^10.9.2",
+    "tsx": "^4.20.3",
+    "typescript": "^5.8.3",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.2.4"
   }
 }
